# VQC_PolicyGradients

./: README.md  main.py  notebook.ipynb  pennytorch.ipynb  pyproject.toml  requirements.txt
TFQuantum Tutorials/: barren_plateaus.ipynb  gradients.ipynb  hello_many_worlds.ipynb  mnist.ipynb  noise.ipynb  qcnn.ipynb  quantum_data.ipynb  quantum_reinforcement_learning.ipynb
Work/: QRL.ipynb  circuit.py  circuit_generator.py  jebbi.py  measures.py  pennytorch.ipynb  policy.py  policy_structure.py  pqc_circuit.py  pqc_operations.py  utils.py
Work/CartPole-v1_raw_contiguous_4/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json  agent_characteristics.json
Work/CartPole-v1_raw_contiguous_6/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json  agent_characteristics.json
Work/CartPole-v1_raw_contiguous_8/: agent_characteristics.json
configs/: jerbi_softmax_5layer_acrobot.py  jerbi_softmax_5layer_cartpole.py  tfq_softmax_5layer_acrobot.py  tfq_softmax_5layer_cartpole.py  uqc_softmax_5layer_4qubit_acrobot.py  uqc_softmax_5layer_4qubit_cartpole.py
package/: main.py
package/agent/: reinforce.py  utils.py
package/analysis/: graph.ipynb
package/model/: circuit_generator.py  quantum_model.py
package/pqc/: measures.py  pqc_circuit.py  pqc_operations.py
package/utils/: __init__.py  utils.py
package/vqc/: __init__.py  vqc_designs.py  vqc_observables.py
vqcpg/: __init__.py  main.py
vqcpg/agent/: __init__.py  reinforce.py
vqcpg/analysis/: __init__.py  analysis.py  thesis.ipynb
vqcpg/model/: __init__.py  (+4 more)
(+18 files in other folders)
