[tool.poetry]
name = "vqc-policygradient"
version = "1.0.0"
description = "A Python library for the analysis of VQC-based policy gradient-based models."
authors = ["Bernardo Soares <soaresberna@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"
numpy = "1.24.3"
PennyLane = "0.35.0"
torch = "2.2.1"
tensorboard = "2.13.0"
ray = "2.38.0"
gym = "0.26.2"
matplotlib = "3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
